[gd_scene load_steps=3 format=3 uid="uid://xqtiibh0oo37"]

[ext_resource type="Script" uid="uid://bh1vhgpxwsvsc" path="res://scripts/Goal/chasing_snake_exit.gd" id="1_mcala"]

[sub_resource type="RectangleShape2D" id="RectangleShape2D_rx1o5"]
size = Vector2(39.8125, 87)

[node name="ChasingSnakeExit" type="Area2D"]
collision_layer = 0
script = ExtResource("1_mcala")

[node name="CollisionShape2D" type="CollisionShape2D" parent="."]
position = Vector2(3391.09, 134.5)
shape = SubResource("RectangleShape2D_rx1o5")

[connection signal="body_entered" from="." to="." method="_on_body_entered"]
